NewArchive/aa73c111c2b16285b4f1e504aef3582a-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:12: error: expected constructor, destructor, or type conversion before ‘(’ token
 AudioStream(AudioDevice& inputDevice,
            ^
